2008-10-07  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Parser.py:
	* pycvsanaly2/Repository.py:

	For the SCMs where it's not possible to commit in more than one
	branch at the same time (in the same commit) we can just associate
	the branch to the commit instead of to every action.
	
2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/AsyncQueue.py:

	Add an optional timeout parameter to get method and raise a
	TimeOut exception when the queue is empty and the timeout is over.
	
	* pycvsanaly2/Parser.py:

	Fix a race condition when the thread finishes and we are waiting
	forever in get()
	
2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:

	Do not crash when an invalid path has been provided, show an error
	and exit instead. Fixes bug #792.
	
2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Database.py:

	Create the index for file_name on table tree when creating the
	table and don't remove it.
	
2008-10-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:

	Several performance improvements in the paths handling:
	  - Only store the file_id in the file cache, we don't actually
	    need to store the whole file object
	  - Look only for id instead of * in the tree table
	  - Create an index for file_name on table tree. It drastically
	    improves the performance of the whole process.
	Profile statements have been added too for debugging. 
	
2008-10-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/AsyncQueue.py:
	* pycvsanaly2/Parser.py:

	Use a thread to read the log from the repository log command
	output so that the log is read into memory as soon as possible and
	we don't depend on the network most of the time.
	
2008-10-01  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>
